[package]
name = "bronzite"
version = "0.1.0"
edition = "2024"
description = "🔮 Compile-time type reflection for Rust - inspect traits, fields, and methods from proc-macros"
license = "MIT OR Apache-2.0"
repository = "https://github.com/drewridley/bronzite"
homepage = "https://github.com/drewridley/bronzite"
documentation = "https://docs.rs/bronzite"
readme = "README.md"
keywords = ["reflection", "proc-macro", "compile-time", "type-system", "introspection"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
authors = ["Drew Ridley"]

[workspace]
members = [
    "crates/bronzite-query",
    "crates/bronzite-types",
    "crates/bronzite-client",
    "crates/bronzite-daemon",
    "crates/bronzite-macros",
]
exclude = ["example", "examples"]

[workspace.dependencies]
bronzite-types = { path = "crates/bronzite-types", version = "0.1.0" }
bronzite-client = { path = "crates/bronzite-client", version = "0.1.0" }
bronzite-macros = { path = "crates/bronzite-macros", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dependencies]
bronzite-client = { path = "crates/bronzite-client", version = "0.1.0" }
bronzite-macros = { path = "crates/bronzite-macros", version = "0.1.0" }
bronzite-types = { path = "crates/bronzite-types", version = "0.1.0" }
