[package]
name = "bronzite-query"
version = "0.2.0"
edition = "2024"
description = "🔮 Rustc plugin for Bronzite compile-time reflection - extracts type information from Rust code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/drewridley/bronzite"
homepage = "https://github.com/drewridley/bronzite"
documentation = "https://docs.rs/bronzite-query"
readme = "../../README.md"
keywords = ["reflection", "proc-macro", "compile-time", "type-system", "rustc"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
authors = ["Drew Ridley"]

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rustc_plugin = "0.14.3-nightly-2025-08-20"
bronzite-types = { path = "../bronzite-types", version = "0.2.0" }
env_logger = { version = "0.10", default-features = false }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
rustc_plugin = "0.14.3-nightly-2025-08-20"

[[bin]]
name = "bronzite-query-driver"
path = "src/bin/bronzite-query-driver.rs"

[[bin]]
name = "cargo-bronzite-query"
path = "src/bin/cargo-bronzite-query.rs"
