[package]
name = "bronzite-types"
version = "0.2.0"
edition = "2024"
description = "🔮 Shared types for Bronzite compile-time reflection IPC protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/drewridley/bronzite"
homepage = "https://github.com/drewridley/bronzite"
documentation = "https://docs.rs/bronzite-types"
readme = "../../README.md"
keywords = ["reflection", "proc-macro", "compile-time", "type-system", "introspection"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
authors = ["Drew Ridley"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
